Final draft of landing page project

--- a/index.html
+++ b/index.html
@@ -19,22 +19,34 @@
     <div class="main-flex">
         <div class="main-first">
             <div>
-                <div>
+                <div class="hero-flexcontainer">
                     <div class="hero-text">This website is awesome</div>
-                    <div>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
+                    <div class="hero-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
                     </div>
                     <button>Sign up</button>
                 </div>
             </div>
-            <img src="" alt="this is a placeholder for an img"></img>
+            <div class="img-flexcontainer">this is a placeholder for an image</div>
         </div>
         <div class="main-second">
             <div>Some random information.</div>
             <div class="images">
-                <div>a</div>
-                <div>b</div>
-                <div>c</div>
-                <div>d</div>
+                <div>
+                    <div class="imgborder"></div>
+                    <div class="imgsubtext">this is some subtext under an illustration or image</div>
+                </div>
+                <div>
+                    <div class="imgborder"></div>
+                    <div class="imgsubtext">this is some subtext under an illustration or image</div>
+                </div>
+                <div>
+                    <div class="imgborder"></div>
+                    <div class="imgsubtext">this is some subtext under an illustration or image</div>
+                </div>
+                <div>
+                    <div class="imgborder"></div>
+                    <div class="imgsubtext">this is some subtext under an illustration or image</div>
+                </div>
             </div>
         </div>
         <div class="main-third">
@@ -43,10 +55,12 @@
         </div>
         <div class="main-fourth">
             <div>
-                <div>Call to action! It's time!</div>
-                <div>Sign up for our product by clicking that button right over there!</div>
+                <div>
+                    <div class="fourth-action">Call to action! It's time!</div>
+                    <div class="fourth-signup">Sign up for our product by clicking that button right over there!</div>
+                </div>
+                <button>Sign up</button>
             </div>
-            <button>Sign up</button>
         </div>
     </div>
     <footer>Copyright &copy; The Odin Project 2021
