--- a/index.html
+++ b/index.html
@@ -6,17 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Landing Page</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+    </style>
 
 </head>
 
 <body>  
-    <header>
-        <div class="header-logo">Header Logo</div>
-        <div>header link one</div>
-        <div>header link two</div>
-        <div>header link three</div>
-    </header>
     <div class="main-flex">
+        <header>
+            <div class="header-logo">Header Logo</div>
+            <div>header link one</div>
+            <div>header link two</div>
+            <div>header link three</div>
+        </header>
         <div class="main-first">
             <div>
                 <div class="hero-flexcontainer">
@@ -62,9 +65,9 @@
                 <button>Sign up</button>
             </div>
         </div>
+        <footer>Copyright &copy; The Odin Project 2021</footer>
     </div>
-    <footer>Copyright &copy; The Odin Project 2021
-    </footer>
+    
 </body>
 
 </html>
